fixing alignment of vert_nav

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 i.right {
-    margin-top: 10px;
+    margin-top: 14px;
 }
 
 nav ul a {
